# sidecar-bittensor

./: .gitignore  Dockerfile  README.md  pyproject.toml
restful_bittensor/: client.py  schemas.py  server.py  set_weights.py
sidecar_bittensor/: __init__.py  client.py  schemas.py  server.py
sidecar_bittensor/metagraph/: __init__.py  axon.py
