[tool.hatch.build.targets.wheel]
packages = ["restful_bittensor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "restful-bittensor"
version = "0.1.0"
description = "RESTful API wrapper for Bittensor network operations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "bittensor==9.0.0",
    "fastapi>=0.110.3",
    "loguru>=0.7.3",
    "tabulate>=0.9.0",
    "uvicorn>=0.34.0",
    "async-substrate-interface==1.0.0",
    "pydantic-settings>=2.7.1",
    "substrate-interface",
]

[project.urls]
Homepage = "https://github.com/yourusername/restful-bittensor"
Repository = "https://github.com/yourusername/restful-bittensor.git"


[project.scripts]
rb-start-server = "restful_bittensor.server:start_server"
